fix invisible marker focus button

--- a/public/styles/components/_map.scss
+++ b/public/styles/components/_map.scss
@@ -48,7 +48,6 @@
   margin: 0;
 }
 
-.mapboxgl-ctrl-top-right,
 .mapboxgl-ctrl-bottom-left,
 .mapboxgl-ctrl-bottom-right {
   display: none;
